--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </nav>
             <ul class="header-list-contacts list">
                 <li class="header-mail-item" >
-                    <div class="mail-tel">
-                        <a class="mail-icon-link  header-mail-link link" href="mailto:info@devstudio.com" ><svg class="mail-icon " width="16" height="12">
+                    <div class="mail-tel ">
+                        <a class="mail-icon-link  header-mail-link link effect-animation " href="mailto:info@devstudio.com" ><svg class="mail-icon " width="16" height="12">
                                 <use href="./images/icons/3-symbol-defs.svg#icon-envelope-hover"></use>
                             </svg>
                         
@@ -344,7 +344,7 @@
               <div class="container">
                   <h2 class="section-5-title">Постоянные клиенты</h2>
                   <ul class="client-icon-list list">
-                     <li class="client-icon-item box-1">
+                     <li class="client-icon-item link box-1">
                          <a class="client-icon-link link" href="">
                              <svg class="client-icon" width="106" height="60">
                             <use href="./images/icons/2-symbol-defs.svg#icon-Logo-1"></use>
@@ -398,7 +398,7 @@
             <div class="footer-contacts-container">
                 <a class="footer-logo link" href="./index.html">Web<span class="footer-studio-logo">Studio</span></a>
                 <address class="footer-address">
-                    <ul class="footer-address-list list link">
+                    <ul class="footer-address-list list ">
                         <li class="footer-item-adress"><a class="footer-adress-item link" href="https://goo.gl/maps/XvD9XZvy2aRC84E2A" target="_blank"
                                 rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li class="footer-item-mail"><a  class="footer-mail-item link"  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
