--- a/portfolio.html
+++ b/portfolio.html
@@ -64,11 +64,11 @@
         <section class="portfolio-section">
                 <div class="container">
                     <ul  class="first-portfolio-list list">
-                        <li class="fierst-portfolio-item "><button class="portfolio-button1 effect-btn-shadow" type="button">Все</button></li>
-                        <li class="fierst-portfolio-item "><button class="portfolio-button2 effect-btn-shadow" type="button">Веб-сайты</button></li>
-                        <li class="fierst-portfolio-item "><button class="portfolio-button3 effect-btn-shadow" type="button">Приложения</button></li>
-                        <li class="fierst-portfolio-item "><button class="portfolio-button4 effect-btn-shadow" type="button">Маркетинг</button></li>
-                        <li class="fierst-portfolio-item "><button class="portfolio-button5 effect-btn-shadow" type="button">Дизайн</button></li>
+                        <li class="fierst-portfolio-item "><button class="portfolio-button effect-btn-shadow " type="button">Все</button></li>
+                        <li class="fierst-portfolio-item "><button class="portfolio-button effect-btn-shadow " type="button">Веб-сайты</button></li>
+                        <li class="fierst-portfolio-item "><button class="portfolio-button effect-btn-shadow " type="button">Приложения</button></li>
+                        <li class="fierst-portfolio-item "><button class="portfolio-button effect-btn-shadow " type="button">Маркетинг</button></li>
+                        <li class="fierst-portfolio-item "><button class="portfolio-button effect-btn-shadow " type="button">Дизайн</button></li>
                     </ul>
             
                 
